// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback events 1`] = `
<div class="van-popup van-popup--bottom van-actionsheet" name="van-popup-slide-bottom">
  <div class="van-actionsheet__item van-hairline--top"><span class="van-actionsheet__name">Option</span></div>
  <div class="van-actionsheet__item van-actionsheet__item--disabled van-hairline--top"><span class="van-actionsheet__name">Option</span></div>
  <div class="van-actionsheet__cancel">Cancel</div>
</div>
`;

exports[`disable lazy-render 1`] = `
<div class="van-popup van-popup--bottom van-actionsheet" style="display: none;" name="van-popup-slide-bottom">
  <div class="van-actionsheet__item van-hairline--top"><span class="van-actionsheet__name">Option</span></div>
  <div class="van-actionsheet__item van-hairline--top"><span class="van-actionsheet__name">Option</span></div>
  <div class="van-actionsheet__cancel">Cancel</div>
</div>
`;
